feat: update Gradle wrapper and improve test configurations